--- a/client/src/views/Newsfeed/Newsfeed.css
+++ b/client/src/views/Newsfeed/Newsfeed.css
@@ -1,10 +1,3 @@
-body {
-  background-image: linear-gradient(to top, #efe68c, #00bfff);
-  background-size: cover;
-  background-repeat: no-repeat;
-  margin: 0;
-}
-
 .under-navbar {
   display: flex;
   flex-direction: row;
